# parrot

./: .gitignore  404.html  CITATION.cff  Example.ipynb  Example_compact.ipynb  Example_compact.py  MWE.py  MWE2.py  README.md  environment.yml  index.html  mkdocs.yml  my_test_flatten_noise_floor.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
anaTHz/: __init__.py  my_test_01.py  test_01.py
anaTHz/load/: load.py  recording_device.py  recording_type.py
anaTHz/plot/: plot.py
anaTHz/process/: __init__.py  cut_data.py  post_process_data.py  prepare_data.py  process_data.py
docs/: index.md  load.md  plot.md  process.md
example/: test_01.py
load/: index.html
parrot/: __init__.py
parrot/config/: config.py
parrot/example/: __init__.py  example.ipynb  example.py  example_compact.ipynb  example_compact.py  init.py
parrot/load/: load.py  recording_device.py  recording_type.py
parrot/plot/: WaterAbsorptionLines.csv  plot.py  plot_debug.py
parrot/process/: __init__.py  cut_data.py  post_process_data.py  prepare_data.py  process_data.py
plot/: index.html
process/: index.html
search/: search_index.json
